--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -291,8 +291,7 @@ header a, nav a, a.button{
 	text-shadow: 1px 2px 1px rgba(255,255,255,.3);
 }
 
-#blog article footer{
-	margin-top: -15px;
+article footer{
 	address, time, a.comments{
 		@include font-size(14px);
 		font-size: 14px !important; //TODO: Without !important time's and a.comments' styles get overwritten, by what and why?
